# smart-contract

./: .env.example  .gitattributes  .gitignore  Anchor.toml  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  tsconfig.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
app/pages/: index.html
app/sdk/: auction.ts  blurPreview.ts  encryption.ts  fileGuard.ts  index.ts  ipfsStorage.ts  marketplace.ts  messaging.ts  pipeline.ts  review.ts  rpc.ts  xonaAgent.ts
docs/: ARCHITECTURE.md  SECURITY.md
indexer/: backfill.ts  index.ts
migrations/: deploy.ts
programs/data_market/: Cargo.toml  Xargo.toml
programs/data_market/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/data_market/src/instructions/: admin.rs  dispute.rs  dutch_auction.rs  english_auction.rs  listing.rs  mod.rs  review.rs  sealed_auction.rs  subscription.rs  user.rs
programs/data_market/src/state/: auction.rs  dispute.rs  dutch.rs  listing.rs  marketplace.rs  mod.rs  review.rs  sealed.rs  subscription.rs  user.rs
scripts/: airdrop.ts  deploy.ts  seed.ts
tests/: admin.ts  data_market.ts  dutch_auction.ts  reputation_dispute.ts  sealed_auction.ts  subscription.ts  user_profile.ts
tests/helpers/: utils.ts
