[package]
name = "data_market"
version = "0.1.0"
description = "OBSCRA — encrypted data marketplace and multi-format auction protocol on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "data_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
